# FastAPI-Experiments

./: .gitignore  README.md  pyproject.toml
fastapi_project/: app.py  database.py  models.py  schemas.py  security.py  settings.py
fastapi_project/routers/: auth.py  users.py
migrations/: env.py
migrations/versions/: 3da8eff6a7c6_create_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_users.py
