[project]
name = "fastapi-experiments"
version = "0.1.0"
description = ""
authors = [
    {name = "heitor",email = "heitor.nolla@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "fastapi[standard] (>=0.115.13,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
